# financial-rag-chatbot

./: .env.example  .gitignore  CHANGELOG.md  README.md  app.py  chunking.py  eval_harness.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
tests/: test_chunking.py  test_smoke.py
