[project]
name = "financial-rag-chatbot"
version = "0.1.0"
description = "Retrieval-Augmented Generation chatbot for financial document analysis, built with LangChain, OpenAI, ChromaDB, and Streamlit"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Satya Sai Prakash Kantamani" },
]
requires-python = ">=3.10"
dependencies = [
    # LangChain 0.3 line (security migration — clears CVE-2025-68664 and 20+ other known vulns)
    "langchain==0.3.30",
    "langchain-core==0.3.86",           # >=0.3.85: CVE-2025-68664, CVE-2026-44843, CVE-2025-65106, CVE-2026-40087
    "langchain-openai==1.3.4",
    "langchain-community==0.3.31",      # >=0.3.27: CVE-2025-6984
    "langchain-chroma==0.2.3",          # kept at 0.2.3: 0.2.4+ force chromadb>=1.0.9 (CVE-2026-45829, unfixed)
    "langchain-text-splitters==0.3.11", # >=0.3.9: CVE-2025-6985
    "langsmith>=0.8.18",                # security floor (transitive via langchain-core)
    "chromadb==0.6.3",                  # latest release with no known CVEs (1.x line: CVE-2026-45829, no fix)
    "posthog>=2.4.0,<6",                # chromadb 0.6.x telemetry is incompatible with posthog 6+ (log spam)
    "openai==1.109.1",
    "streamlit==1.58.0",                # >=1.54.0: CVE-2026-33682, CVE-2026-10804
    "pymupdf==1.28.0",
    "tiktoken==0.13.0",
    "pydantic==2.13.4",
    "pillow>=12.2.0",                   # security floor (transitive via streamlit): 3 high CVEs
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.uv]
# This is an application (flat app.py layout), not an installable package.
package = false
# Transitive constraint only (via chromadb): onnxruntime 1.24+ ships no cp310
# wheels, which would break installs on Python 3.10. 1.23.2 is the last release
# with wheels for the full supported range (3.10-3.12).
constraint-dependencies = ["onnxruntime<=1.23.2"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
